--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "add": "^2.0.6",
+    "classnames": "^2.3.1",
     "date-fns": "^2.21.3",
     "faker": "^5.5.3",
     "miragejs": "^0.1.41",
